# hfr0-muhalo

./: .env.example  CONTRIBUTING.md  Dockerfile  Makefile  README.md  SECURITY.md  pyproject.toml  requirements-dev.txt  requirements.txt
.github/ISSUE_TEMPLATE/: release-checklist.md
.github/workflows/: ci.yml
configs/: default.yaml
docs/: thesis.md
helm/: Chart.yaml
hfr0/: __init__.py
hfr0/analyzers/: hdm.py
hfr0/probes/: μprobe.rs
reproduce/: Makefile  REPRODUCE.md
results/: RESULTS.md  ablation_matrix_2026-02-11.csv  bootstrap_ci_truthfulqa_2026-02-11.txt  hotpotqa_seed42_2026-02-11.json  pist_benchmark_seed42.json
scripts/: pist_benchmark.py
tests/: test_smoke.py
